<resources>
    <string name="app_name">BookingOfMeetingRooms</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_list_room">ListRoomActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="number_chair">кол-во кресел - </string>
    <string name="projector">проектор </string>
    <string name="blackboard">маркерная доска </string>
    <string name="booked"> забронирована </string>
    <string name="room_info"> описание </string>

    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="from">c</string>
    <string name="to">до</string>
    <string name="reserv_room">забронированное время</string>
    <string name="reserv_add">забронировать</string>
    <string name="take">принять</string>
    <string name="cancel">отмена</string>
    <string name="room_reservation">бронирование комнаты</string>
    <string name="start_time">время начала</string>
    <string name="end_time">время окончания</string>
    <string name="number_of_people">кол-во человек</string>
    <string name="freedom">свободна</string>
    <string name="interactive">Переговорные</string>

    <!--menu-->
    <string name="profile">профиль</string>
    <string name="setting">настройка</string>
    <string name="history">история</string>
    <string name="list">переговорные</string>

    <string name="please_choose">Please Choose</string>
    <string name="action_about">About...</string>
    <string name="copyright">Copyright Notice</string>
    <string name="makotogo_example_icon">Makoto Go Example</string>
    <string name="button_choosedatetime">Choose Date/Time</string>
    <string name="choose_date_or_time">Установите время и дату:</string>

    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="register">зарегистрироваться</string>
    <string name="entry">войти</string>
    <string name="check_in">регистрация</string>



    <string name="title_activity_list_rooms">ListRoomsActivity</string>
    <string name="title_activity_reservation_room">ReservationRoom</string>
    <string name="title_activity_reservation_add">ReservationAddActivity</string>
    <string name="title_activity_booking_history">BookingHistory</string>
    <string name="title_activity_drlete">DRLETE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_main343444">Main343444Activity</string>
    <string name="title_activity_main3123123123123">Main3123123123123Activity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
</resources>
